--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.5)
 # tiny log begin
 set(TINY_LOG_LEVEL LOG_INFO)
 set(TINY_LOG_TEST 1)
+set(TINY_LOG_ENABLE_FLOAT 1)
 include(tiny_log.cmake)
 
 # tiny log end
