--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,32 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.20)
 
 # tiny log begin
-set(TINY_LOG_LEVEL LOG_INFO)
-set(TINY_LOG_TEST 1)
-set(TINY_LOG_ENABLE_FLOAT 1)
-include(tiny_log.cmake)
+
+if (NOT TINY_LOG_LEVEL)
+  set(TINY_LOG_LEVEL LOG_INFO)
+endif ()
+
+option(ENABLE_FLOAT "enable float output" OFF)
+if (ENABLE_FLOAT)
+  set(TINY_LOG_ENABLE_FLOAT 1)
+else ()
+  set(TINY_LOG_ENABLE_FLOAT 0)
+endif ()
+
 
 # tiny log end
+
+message(STATUS "log level is ${TINY_LOG_LEVEL}")
+message(STATUS "enable float output ${ENABLE_FLOAT}")
+CONFIGURE_FILE(include/tiny_log_config.h.cmake include/config.h)
+set(TINY_SOURCES src/tiny_log.c)
+set(TINY_LOG_INCLUDE include)
 
 project(tiny_log)
 
 include_directories(${TINY_LOG_INCLUDE})
-file(GLOB_RECURSE SOURCES "test/*.*" ${TINY_SOURCES})
 
-add_executable(tiny_log ${SOURCES})
+add_library(tiny_log ${TINY_SOURCES})
+add_executable(tiny_log_test test/funcs.cpp test/test.cpp)
+add_dependencies(tiny_log_test tiny_log)
+target_link_libraries(tiny_log_test tiny_log)
