默认不激活测试

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ if (NOT TINY_LOG_LEVEL)
 endif ()
 
 option(ENABLE_FLOAT "enable float output" OFF)
+option(TINY_LOG_TEST "enable tiny log test" OFF)
 if (ENABLE_FLOAT)
   set(TINY_LOG_ENABLE_FLOAT 1)
 else ()
@@ -18,7 +19,6 @@ endif ()
 
 message(STATUS "log level is ${TINY_LOG_LEVEL}")
 message(STATUS "enable float output ${ENABLE_FLOAT}")
-message(STATUS "${CMAKE_BINARY_DIR}")
 CONFIGURE_FILE(include/tiny_log_config.h.cmake include/config.h)
 set(TINY_SOURCES src/tiny_log.c)
 set(TINY_LOG_INCLUDE include)
@@ -28,6 +28,8 @@ project(tiny_log)
 include_directories(${TINY_LOG_INCLUDE} ${CMAKE_CURRENT_BINARY_DIR}/include)
 
 add_library(tiny_log ${TINY_SOURCES})
+if (TINY_LOG_TEST)
 add_executable(tiny_log_test test/funcs.cpp test/test.cpp)
 add_dependencies(tiny_log_test tiny_log)
 target_link_libraries(tiny_log_test tiny_log)
+endif ()
