--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,9 @@ endif ()
 
 message(STATUS "log level is ${TINY_LOG_LEVEL}")
 message(STATUS "enable float output ${ENABLE_FLOAT}")
+if(TINY_LOG_SECTION)
+  message(STATUS "custom section: ${TINY_LOG_SECTION}")
+endif ()
 CONFIGURE_FILE(include/tiny_log_config.h.cmake include/config.h)
 set(TINY_SOURCES src/tiny_log.c)
 set(TINY_LOG_INCLUDE include)
