重命名浮点数变量

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ if (NOT TINY_LOG_LEVEL)
   set(TINY_LOG_LEVEL LOG_INFO)
 endif ()
 
-option(ENABLE_FLOAT "enable float output" OFF)
+option(TINY_LOG_ENABLE_FLOAT "enable float output" OFF)
 option(TINY_LOG_TEST "enable tiny log test" OFF)
-if (ENABLE_FLOAT)
+if (TINY_LOG_ENABLE_FLOAT)
   set(TINY_LOG_ENABLE_FLOAT 1)
 else ()
   set(TINY_LOG_ENABLE_FLOAT 0)
